Remove session feature
